force-app/main/default/objects/Instruction__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <label>Sinistre</label>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>Instructions</relationshipLabel>
    <relationshipName>Instructions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>