force-app/main/default/objects/Instruction__c/fields/CommentaireDevisInitial__c.field-meta.xml
<CustomField>
    <fullName>CommentaireDevisInitial__c</fullName>
    <label>Commentaire (devis initial)</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>