force-app/main/default/objects/Instruction__c/fields/CommentairePEC__c.field-meta.xml
<CustomField>
    <fullName>CommentairePEC__c</fullName>
    <label>Commentaire (prise en charge)</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>