force-app/main/default/objects/Instruction__c/fields/Date_Creation__c.field-meta.xml
<CustomField>
    <fullName>Date_Creation__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de création</label>
    <type>Date</type>
</CustomField>