force-app/main/default/objects/Instruction__c/fields/DateEnvoiPEC__c.field-meta.xml
<CustomField>
    <fullName>DateEnvoiPEC__c</fullName>
    <label>Date d&apos;envoi de la PEC</label>
    <type>Date</type>
</CustomField>