force-app/main/default/objects/Instruction__c/fields/DateReceptionDevisInitial__c.field-meta.xml
<CustomField>
    <fullName>DateReceptionDevisInitial__c</fullName>
    <label>Date réception devis initial</label>
    <type>Date</type>
</CustomField>