force-app/main/default/objects/Instruction__c/fields/DebutTravaux__c.field-meta.xml
<CustomField>
    <fullName>DebutTravaux__c</fullName>
    <label>Début des travaux</label>
    <description>Indique que les travaux de réparation ont démarré. Bloque l'annulation de l'instruction à l'étape Réparation (RG6).</description>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>