force-app/main/default/objects/Instruction__c/fields/Etape__c.field-meta.xml
<CustomField>
    <fullName>Etape__c</fullName>
    <label>Etape</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Étude de documents</fullName>
                <default>true</default>
                <label>Étude de documents</label>
            </value>
            <value>
                <fullName>Expertise</fullName>
            </value>
            <value>
                <fullName>Correction du devis</fullName>
            </value>
            <value>
                <fullName>Établissement d&apos;une PEC</fullName>
            </value>
            <value>
                <fullName>Réparation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>