force-app/main/default/objects/Instruction__c/fields/EtapePEC__c.field-meta.xml
<CustomField>
    <fullName>EtapePEC__c</fullName>
    <description>Etape courante du workflow PEC : pilote les droits de saisie sur l&apos;onglet Détails PEC.</description>
    <label>Etape PEC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Etude de document</fullName>
                <default>true</default>
                <label>Etude de document</label>
            </value>
            <value>
                <fullName>Expertise</fullName>
            </value>
            <value>
                <fullName>Correction devis</fullName>
            </value>
            <value>
                <fullName>Etablissement PEC</fullName>
            </value>
            <value>
                <fullName>Réparation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>