force-app/main/default/objects/Instruction__c/fields/FranchiseMax__c.field-meta.xml
<CustomField>
    <fullName>FranchiseMax__c</fullName>
    <label>Franchise Max</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>