force-app/main/default/objects/Instruction__c/fields/FranchiseMin__c.field-meta.xml
<CustomField>
    <fullName>FranchiseMin__c</fullName>
    <label>Franchise Min</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>