force-app/main/default/objects/Instruction__c/fields/FranchisePourcentage__c.field-meta.xml
<CustomField>
    <fullName>FranchisePourcentage__c</fullName>
    <label>Franchise (en %)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>