force-app/main/default/objects/Instruction__c/fields/IdentifiantFiscal__c.field-meta.xml
<CustomField>
    <fullName>IdentifiantFiscal__c</fullName>
    <label>Identifiant fiscal</label>
    <length>80</length>
    <type>Text</type>
</CustomField>