force-app/main/default/objects/Instruction__c/fields/InstructionType__c.field-meta.xml
<CustomField>
    <fullName>InstructionType__c</fullName>
    <label>Type d’instruction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PEC - Prise en charge</fullName>
            </value>
            <value>
                <fullName>Remboursement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>