force-app/main/default/objects/Instruction__c/fields/MontantAccordePEC__c.field-meta.xml
<CustomField>
    <fullName>MontantAccordePEC__c</fullName>
    <label>Montant accordée PEC</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>