force-app/main/default/objects/Instruction__c/fields/MontantApprecie__c.field-meta.xml
<CustomField>
    <fullName>MontantApprecie__c</fullName>
    <label>Montant apprécié</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>