force-app/main/default/objects/Instruction__c/fields/MontantDevisInitial__c.field-meta.xml
<CustomField>
    <fullName>MontantDevisInitial__c</fullName>
    <label>Montant devis initial</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>