force-app/main/default/objects/Instruction__c/fields/MotifAnnulation__c.field-meta.xml
<CustomField>
    <fullName>MotifAnnulation__c</fullName>
    <label>Motif d'annulation</label>
    <description>Motif d'annulation de l'instruction PEC sélectionné par le gestionnaire, manager ou directeur depuis le bandeau de l'instruction. Le libellé affiché est précisé selon l'étape du parcours.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passage à un autre type d'instruction</fullName>
            </value>
            <value>
                <fullName>Désistement de l'assuré</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>