force-app/main/default/objects/Instruction__c/fields/Nature_d_instruction__c.field-meta.xml
<CustomField>
    <fullName>Nature_d_instruction__c</fullName>
    <label>Nature d’instruction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amiable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>