force-app/main/default/objects/Instruction__c/fields/NecessiteExpertise__c.field-meta.xml
<CustomField>
    <fullName>NecessiteExpertise__c</fullName>
    <label>Nécessite une expertise ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>