force-app/main/default/objects/Instruction__c/fields/NomReparateur__c.field-meta.xml
<CustomField>
    <fullName>NomReparateur__c</fullName>
    <label>Nom réparateur</label>
    <length>255</length>
    <type>Text</type>
</CustomField>