force-app/main/default/objects/Instruction__c/fields/NouveauReparateurNonConventionne__c.field-meta.xml
<CustomField>
    <fullName>NouveauReparateurNonConventionne__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nouveau réparateur « non conventionné »</label>
    <type>Checkbox</type>
</CustomField>