force-app/main/default/objects/Instruction__c/fields/ObligationRapportExpertise__c.field-meta.xml
<CustomField>
    <fullName>ObligationRapportExpertise__c</fullName>
    <description>Obligation Rapport d&apos;expertise post travaux</description>
    <label>Obligation Rapport expertise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>