force-app/main/default/objects/Instruction__c/fields/OrigineDevis__c.field-meta.xml
<CustomField>
    <fullName>OrigineDevis__c</fullName>
    <label>Origine devis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garage conventionné</fullName>
            </value>
            <value>
                <fullName>Garage non conventionné</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>