force-app/main/default/objects/Instruction__c/fields/PaiementFranchise__c.field-meta.xml
<CustomField>
    <fullName>PaiementFranchise__c</fullName>
    <label>Paiement de la franchise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A la compagnie</fullName>
            </value>
            <value>
                <fullName>Au garagiste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>