force-app/main/default/objects/Instruction__c/fields/PaiementFranchiseRecu__c.field-meta.xml
<CustomField>
    <fullName>PaiementFranchiseRecu__c</fullName>
    <label>Paiement de la franchise reçu</label>
    <description>Indique que le paiement de la franchise par l'assuré a été reçu. Contrôle de clôture de l'étape Etablissement PEC (CR4) lorsque le paiement de la franchise se fait « A la compagnie ».</description>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>