force-app/main/default/objects/Instruction__c/fields/RemiseFondsDocumentaire__c.field-meta.xml
<CustomField>
    <fullName>RemiseFondsDocumentaire__c</fullName>
    <label>Remise du fonds documentaire à l'expert</label>
    <description>Action cochée lorsque le fonds documentaire / billet d'expertise a été remis à l'expert. Contrôle de clôture de l'étape Etude de document (CR4) lorsqu'une expertise est requise.</description>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>