force-app/main/default/objects/Instruction__c/fields/Reparateur__c.field-meta.xml
<CustomField>
    <fullName>Reparateur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Réparateur (Garagiste/Concessionnaire) retenu pour le devis initial.</description>
    <label>Réparateur</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Instructions (Réparateur)</relationshipLabel>
    <relationshipName>Instructions_Reparateur</relationshipName>
    <type>Lookup</type>
</CustomField>