force-app/main/default/objects/Instruction__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instruction créé</fullName>
            </value>
            <value>
                <fullName>Instruction annulée</fullName>
            </value>
            <value>
                <fullName>Instruction terminée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>