force-app/main/default/objects/Instruction__c/fields/TypeDegat__c.field-meta.xml
<CustomField>
    <fullName>TypeDegat__c</fullName>
    <label>Type de dégât</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Matériel</fullName>
            </value>
            <value>
                <fullName>Corporel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>