force-app/main/default/objects/Instruction__c/fields/Vehicule__c.field-meta.xml
<CustomField>
    <fullName>Vehicule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Véhicule</label>
    <referenceTo>Vehicule__c</referenceTo>
    <relationshipLabel>Instructions</relationshipLabel>
    <relationshipName>Instructions</relationshipName>
    <type>Lookup</type>
</CustomField>