force-app/main/default/objects/Instruction__c/fields/Victimes__c.field-meta.xml
<CustomField>
    <fullName>Victimes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Victimes</label>
    <referenceTo>ClaimParticipant__c</referenceTo>
    <relationshipLabel>Instructions</relationshipLabel>
    <relationshipName>Instructions</relationshipName>
    <type>Lookup</type>
</CustomField>