force-app/main/default/objects/Instruction__c/recordTypes/Contentieux_entrant.recordType-meta.xml
<RecordType>
    <fullName>Contentieux_entrant</fullName>
    <active>false</active>
    <label>Contentieux entrant</label>
</RecordType>