force-app/main/default/objects/Instruction__c/recordTypes/Contentieux_sortant.recordType-meta.xml
<RecordType>
    <fullName>Contentieux_sortant</fullName>
    <active>false</active>
    <label>Contentieux sortant</label>
</RecordType>