force-app/main/default/objects/Instruction__c/recordTypes/Deces.recordType-meta.xml
<RecordType>
    <fullName>Deces</fullName>
    <active>false</active>
    <label>Décès</label>
</RecordType>