force-app/main/default/objects/Instruction__c/recordTypes/Indemnisation.recordType-meta.xml
<RecordType>
    <fullName>Indemnisation</fullName>
    <active>false</active>
    <label>Indemnisation</label>
</RecordType>