force-app/main/default/objects/Instruction__c/recordTypes/PEC_Prise_en_charge.recordType-meta.xml
<RecordType>
    <fullName>PEC_Prise_en_charge</fullName>
    <active>true</active>
    <label>PEC (Prise en charge)</label>
</RecordType>