force-app/main/default/objects/Instruction__c/recordTypes/Post_guerison.recordType-meta.xml
<RecordType>
    <fullName>Post_guerison</fullName>
    <active>false</active>
    <label>Post guérison</label>
</RecordType>